# tendril-wiki

./: .fdignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  reference.js
.github/workflows/: release.yml  rust.yml
config/: config.toml  userstyles.css
libs/logging/: Cargo.toml
libs/logging/src/: lib.rs
libs/markdown/: Cargo.toml
libs/markdown/fixtures/: But I'm a Conservative.md  Logical reality.md  Logical reality.txt  reality_shaping_thoughts.md  reality_shaping_thoughts.txt
libs/markdown/src/: lib.rs
libs/markdown/src/ingestors/: fs.rs  mod.rs
libs/markdown/src/parsers/: block.rs  formatters.rs  html.rs  machine.rs  meta.rs  mod.rs  templates.rs
libs/markdown/src/processors/: mod.rs  tags.rs
libs/markdown/templates/: backlinks.stpl  edit.stpl  file_list.stpl  file_uploader.stpl  footer.stpl  help_page.stpl  index.stpl  login_page.stpl  main.stpl  nav.stpl  new_page.stpl  search_page.stpl  search_results.stpl  search_results_context.stpl  static.stpl  styles.stpl  tag_idx.stpl  tags.stpl  user_style.stpl
libs/persistance/: Cargo.toml
libs/persistance/src/: fs.rs
libs/persistance/src/fs/: config.rs  mod.rs  utils.rs
libs/render/: Cargo.toml
libs/render/src/: all_pages.rs  bookmark_page.rs  error_page.rs  file_upload_page.rs  help_page.rs  index_page.rs  injected_html.rs  lib.rs  link_page.rs  login_page.rs  new_page.rs  opensearch_page.rs  search_page.rs  search_results_context_page.rs  search_results_page.rs  static_site_page.rs  styles_page.rs  tag_index_page.rs  tag_page.rs  tasks_page.rs  uploaded_files_page.rs  wiki_page.rs
libs/search-engine/: Cargo.toml
libs/search-engine/src/: indexer.rs  lib.rs  searcher.rs  tokenizer.rs
libs/search-engine/src/indexer/: archive.rs  mod.rs  notebook.rs
libs/task-runners/: Cargo.toml
libs/task-runners/src/: cache.rs  lib.rs  password.rs  sync.rs  verify.rs
libs/task-runners/src/messages/: mod.rs
libs/task-runners/src/runners/: api_runner.rs  bookmark_runner.rs  mod.rs  static_page_runner.rs  todo_runner.rs  wiki_runner.rs
libs/tasks/: Cargo.toml
libs/tasks/src/: archive.rs  lib.rs  password.rs  search.rs  sync.rs
libs/tasks/src/messages/: mod.rs
libs/todo/: Cargo.toml
libs/todo-list/: Cargo.toml
libs/todo-list/src/: lib.rs  parse.rs
libs/todo/src/: lib.rs  parse.rs
libs/wikitext/: Cargo.toml
libs/wikitext/fixtures/: But I'm a Conservative.txt
libs/wikitext/src/: lib.rs
libs/wikitext/src/parsers/: block.rs  formatters.rs  headers.rs  html.rs  mod.rs  templates.rs
libs/wikitext/src/processors/: mod.rs  tags.rs
libs/www/: Cargo.toml
libs/www/src/: lib.rs
libs/www/src/controllers/: mod.rs
libs/www/src/handlers/: api.rs  api_handler.rs  bookmark_handler.rs  bookmarks_page.rs  filters.rs  mod.rs  sinks.rs  static_file_handler.rs  static_files.rs  static_page_handler.rs  static_pages.rs  tasks_page.rs  todo_handler.rs  user_styles.rs  wiki_handler.rs  wiki_page.rs
libs/www/src/services/: mod.rs
services/: linux.service  macos.plist
static/: autocomplete.css  clear-nav-links.js  dialogs.js  edit.js  editor.css  editor.js  handle-recent.js  index-page.css  manifest.json  mobile.css  modal.css  newPage.js  note-styles.css  script.js  search-results.css  search-results.js  searchPage.js  sidebar.js  static-form.css  style.css  sw.js  tasks.css  tasks.js  tasks.mobile.css  tests.js  update-check.js  user-styles.js
static/mods/: app-context.js  autocomplete.js  base-html-editor.js  block-actions.js  block-editor.js  component-register.js  dom.js  metadata-editor.js  parsing.js  score.js  store.js  tag-editor.js  title-editor.js  transformers.js  utils.js
static/utils/: parsing.js
static/vendors/: caretposition.js  tracery.js
templates/: backlinks.html  bookmark_add.html  content.html  edit.html  error_page.html  file_list.html  file_upload.html  footer.html  help.html  index.html  login.html  main.html  meta.html  nav.html  new_page.html  opensearchdescription.xml  page_list.html  raw_html.html  search.html  search_form.html  search_results.html  sidebar.html  static_site.html  styles.html  tag_idx.html  tags.html  tasks_page.html  user_style.html
