[package]
name = "markdown"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
logging = { path = "../logging" }
tasks = { path = "../tasks" }
urlencoding = "2.1.0"
thiserror = "1.0.30"
chrono = "0.4.19"
