[package]
name = "markdown"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
logging = { path = "../logging" }
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
tasks = { path = "../tasks" }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["fs"], default-features = false }
urlencoding = "2.1.0"
