[package]
name = "persistance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
markdown = { path = "../markdown" }
render = { path = "../render" }
urlencoding = "1.1.1"
thiserror = "1.0.24"
chrono = "0.4.19"
directories = "3.0.1"
