[package]
name = "persistance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
tokio = { version = "1.17.0", features = ["fs"] }
markdown = { path = "../markdown" }
render = { path = "../render" }
urlencoding = "2.1.0"
thiserror = "1.0.30"
chrono = "0.4.19"
directories = "4.0.1"
