[package]
name = "persistance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
directories = "4.0.1"
lazy_static = "1.4.0"
wikitext = { path = "../wikitext" }
serde = "1.0.136"
serde_derive = "1.0.136"
tasks = { path = "../tasks" }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["fs"], default-features = false }
toml = "0.5.8"
