[package]
name = "render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = { path = "../markdown" }
chrono = "0.4.19"
# TODO: fix this weird dependency...
tasks = { path = "../tasks" }
# Bleh. I don't like having multiple deps like this scattered about...
directories = "3.0.1"
lazy_static = "1.4.0"
