[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
build = { path = "../build" }
compression = "0.1.5"
futures = "0.3.21"
lazy_static = "1.4.0"
wikitext = { path = "../wikitext" }
persistance = { path = "../persistance" }
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
stem = { git = "https://github.com/minhnhdo/rust-stem", branch = "master" }
tokio = { version = "1.17.0", features = ["time", "rt", "macros"], default-features = false }
