[package]
name = "search_engine"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
byteorder = "1.4.3"
compression = "0.1.5"
futures = "0.3.21"
lazy_static = "1.4.0"
wikitext = { path = "../wikitext" }
persistance = { path = "../persistance" }
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
stem = { git = "https://github.com/minhnhdo/rust-stem", branch = "master" }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["time", "rt", "macros"], default-features = false }
