[package]
name = "task_runners"
version = "1.0.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
argon2 = "0.4.0"
compression = "0.1.5"
directories = "4.0.1"
futures = "0.3.21"
rand_core = { version = "0.6.3", features = ["std"] }
readability = { git = "https://github.com/jamestthompson3/readability", version = "0.2.0", features = ["reqwest"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["time", "rt", "sync"], default-features = false }
ulid = { version = "0.5.0", features = ["serde"] }
wikitext = { path = "../wikitext" }
