[package]
name = "tasks"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.0"
directories = "4.0.1"
futures = "0.3.21"
rand_core = { version = "0.6.3", features = ["std"] }
tokio = { version = "1.17.0", features = ["rt", "time"] }
