[package]
name = "tasks"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
argon2 = "0.4.0"
compression = "0.1.5"
directories = "4.0.1"
futures = "0.3.21"
rand_core = { version = "0.6.3", features = ["std"] }
readability = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["time", "rt", "sync"] }
ulid = { version = "0.5.0", features = ["serde"] }
