[package]
name = "www"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

[dependencies]
base64 = "0.13.0"
build = { path = "../build" }
bytes = "1.0.1"
chrono = "0.4.19"
futures = "0.3.15"
jsonwebtoken = "7.2.0"
logging = { path = "../logging" }
markdown = { path = "../markdown" }
persistance = { path = "../persistance" }
render = { path = "../render" }
serde = {version = "1.0", features = ["derive"] }
tasks = { path = "../tasks" }
thiserror = "1.0.24"
todo = { path = "../todo" }
tokio = { version = "1", features = ["full"] }
urlencoding = "1.1.1"
warp = { version = "0.3.1", features = ["multipart"] }
