[package]
name = "www"
version = "0.1.0"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

[dependencies]
base64 = "0.13.0"
build = { path = "../build" }
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
jsonwebtoken = "8.0.1"
logging = { path = "../logging" }
log = "0.4.16"
markdown = { path = "../markdown" }
persistance = { path = "../persistance" }
pretty_env_logger = "0.4.0"
render = { path = "../render" }
serde = { version = "1.0.136", features = ["derive"] }
tasks = { path = "../tasks" }
thiserror = "1.0.30"
todo = { path = "../todo" }
tokio = { version = "1.17.0", features = ["full"] }
urlencoding = "2.1.0"
warp = { version = "0.3.2", features = ["multipart"] }
