[package]
name = "www"
version = "1.0.8"
authors = ["taylor <taylor@teukka.tech>"]
edition = "2021"

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
jsonwebtoken = "8.0.1"
log = "0.4.16"
wikitext = { path = "../wikitext" }
persistance = { path = "../persistance" }
pretty_env_logger = "0.4.0"
render = { path = "../render" }
search_engine = { path = "../search-engine" }
serde = { version = "1.0.136", features = ["derive"] }
task_runners = { path = "../task-runners" }
thiserror = "1.0.30"
todo_list = { path = "../todo-list" }
tokio = { version = "1.17.0", features = ["fs"], default-features = false }
urlencoding = "2.1.0"
warp = { version = "0.3.2", features = ["multipart"] }
